@@ -269,3 +269,29 @@
     其次，通过上述分析，可以看出虚拟机内部已有很多优化来保证应用的稳定运行，所以不要为了调优而调优，不当的调优可能适得其反。
     最后，GC优化是一个系统而复杂的工作，没有万能的调优策略可以满足所有的性能指标。GC优化必须建立在我们深入理解各种垃圾回收器的基础上，才能有事半功倍的效果。
 
+
+### 常见配置汇总
+    1、堆设置
+    -Xms :初始堆大小
+    -Xmx :最大堆大小
+    -XX:NewSize=n :设置年轻代大小
+    -XX:NewRatio=n: 设置年轻代和年老代的比值。如:为3，表示年轻代与年老代比值为 1：3，年轻代占整个年轻代年老代和的1/4
+    -XX:SurvivorRatio=n :年轻代中Eden区与两个Survivor区的比值。注 意Survivor区有两个。如：3，表示Eden：Survivor=3：2，一个Survivor区占整个年轻代的1/5
+    -XX:MaxPermSize=n :设置持久代大小
+    2、收集器设置
+    -XX:+UseSerialGC :设置串行收集器
+    -XX:+UseParallelGC :设置并行收集器
+    -XX:+UseParalledlOldGC :设置并行年老代收集器
+    -XX:+UseConcMarkSweepGC :设置并发收集器
+    3、垃圾回收统计信息
+    -XX:+PrintGC
+    -XX:+PrintGCDetails
+    -XX:+PrintGCTimeStamps
+    -Xloggc:filename
+    4、并行收集器设置
+    -XX:ParallelGCThreads=n :设置并行收集器收集时使用的CPU数。并行收集线程数。
+    -XX:MaxGCPauseMillis=n :设置并行收集最大暂停时间
+    -XX:GCTimeRatio=n :设置垃圾回收时间占程序运行时间的百分比。公式为 1/(1+n)
+    5、并发收集器设置
+    -XX:+CMSIncrementalMode :设置为增量模式。适用于单CPU情况。
+    -XX:ParallelGCThreads=n :设置并发收集器年轻代收集方式为并行收集时，使 用的CPU数。并行收集线程数。
